# online-stitcher

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh
plots/: readme.md  transforms.plot
src/: CMakeLists.txt  aligner.hpp  alignerTest.cpp  alignment.hpp  asyncAligner.hpp  asyncQueueWorker.hpp  asyncStreamWrapper.hpp  bruteForceAlignerTest.cpp  bundleAligner.hpp  checkpointStore.cpp  checkpointStore.hpp  core.cpp  core.hpp  correlation.hpp  debugHookTest.cpp  drawing.hpp  dynamicSeamer.cpp  dynamicSeamer.hpp  exposureCompensator.hpp  featureChainTest.cpp  flowBlendingTest.cpp  flowFieldLKTest.cpp  flowTest.cpp  functional.hpp  getArrowAngle.cpp  gfFactors.cpp  glFactors.cpp  image.cpp  image.hpp  imageCorrespondenceGraph.hpp  imageResizer.hpp  imageSelector.hpp  inputImage.cpp  inputImage.hpp  intrinsics.cpp  intrinsics.hpp  io.cpp  io.hpp  ios-testbed.cpp  irrlichtTest.cpp  (+58 more)
src/common/: .support.hpp.swp  JniHelper.cpp  JniHelper.hpp  assert.hpp  asyncQueueWorker.hpp  asyncStreamWrapper.hpp  backtrace.hpp  bimap.hpp  drawing.hpp  functional.hpp  graph.hpp  image.hpp  imageCorrespondenceGraph.hpp  imageQueueProcessor.hpp  intrinsics.hpp  jniHelper.cpp  logger.hpp  progressCallback.hpp  queueProcessor.hpp  reduceProcessor.hpp  ringProcessor.hpp  sink.hpp  static_counter.cpp  static_counter.hpp  static_timer.cpp  static_timer.hpp  support.hpp
src/debug/: CMakeLists.txt  debugHook.cpp  debugHook.hpp  irrlichtTest.cpp  irrlichtThreadingTest.cpp  visualDebugHook.cpp  visualDebugHook.hpp
src/debug/assets/: camera.3ds
src/imgproc/: correlation.hpp  pairwiseCorrelator.hpp  pairwiseVisualAligner.hpp  panoramaBlur.hpp  planarCorrelator.hpp
src/io/: checkpointStore.cpp  checkpointStore.hpp  inputImage.cpp  inputImage.hpp  io.cpp  io.hpp
src/math/: projection.hpp  quat.cpp  quat.hpp  stat.hpp  support.cpp  support.hpp
src/minimal/: .imagePreperation.hpp.swp  imagePreperation.hpp  stereoConverter.hpp
src/osxsupport/: CMakeLists.txt  threadDetach.h  threadDetach.mm
src/recorder/: .recorder.hpp.swp  Alignment.h  Alignment.mm  ImageSelector.hpp  aligner.hpp  alignmentGraph.hpp  asyncAligner.hpp  asyncTolerantRingRecorder.hpp  bundleAligner.hpp  coordinateConverter.hpp  debugSink.hpp  exposureCompensator.hpp  imageCorrespondenceFinder.hpp  imageCorrespondenceFinderMultiWrapper.hpp  imageForPostProcess.hpp  imageLoader.hpp  imageReselector.hpp  imageSelector.hpp  imageSink.hpp  iterativeBundleAligner.hpp  jumpFilter.hpp  motorControlRecorder.hpp  multiRingRecorder2.hpp  recorder.cpp  recorder.hpp  recorder2.hpp  recorderController.hpp  recorderGraph.hpp  recorderGraphGenerator.hpp  recorderMotor.hpp  recorderParamInfo.hpp  ringCloser.hpp  ringwiseStreamAligner.hpp  sequenceStreamAligner.hpp  stereoGenerator.hpp  stereoSink.hpp  storageImageSink.hpp  storageSink.hpp  streamingRecorderController.hpp  tolerantRecorderController.hpp  (+2 more)
src/shader/: base.vert  subtract.frag
src/stereo/: .monoStitcher.cpp.swp  Alignment.h  monoStitcher.cpp  monoStitcher.hpp
src/stitcher/: Alignment.mm  convertToStereo.hpp  dynamicSeamer.cpp  dynamicSeamer.hpp  flowBlender.cpp  flowBlender.hpp  globalAlignment.hpp  multiringStitcher.cpp  multiringStitcher.hpp  ringStitcher.cpp  ringStitcher.hpp  simplePlaneStitcher.cpp  simplePlaneStitcher.hpp  simpleSphereStitcher.cpp  simpleSphereStitcher.hpp  stitcher.hpp  stitcherSink.hpp  stitchingResult.hpp
src/test/: .processorTest.cpp.swp  CMakeLists.txt  asyncQueueTest.cpp  graphTest.cpp  processorTest.cpp  quatTest.cpp  slerpTest.cpp  statTest.cpp
